--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,12 +25,10 @@ body {
     margin-right: 10px;
 }
 
-.session {}
-
 .face {
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%), #E6D6C6;
     box-shadow: 0px 3.58543px 3.58543px rgba(0, 0, 0, 0.25);
-    border-radius: 7.17087px;
+    border-radius: 7px;
     width: 288px;
     height: 45px;
     margin-top: 20px;
@@ -52,6 +50,7 @@ body {
 #adder-circle {
     margin-top: 20px;
     border-radius: 50%;
+    background: #E6D6C6;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%), rgba(230, 214, 198);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
