--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,6 +67,13 @@ body {
     margin: 0 4px 0 0;
 }
 
+.svg-minus {
+    width: 36px;
+    height: 36px;
+    margin: 0px;
+    padding: 0px;
+}
+
 .editsymbol {
     align-self: flex-end;
     margin: 3px;
