--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,16 +59,7 @@ body {
 }
 
 .deletesymbol {
-    border-radius: 50%;
-    background: #AF1111;
-    width: 36px;
-    height: 36px;
-    margin: 0 4px 0 0;
-}
-
-.svg-minus {
-    width: 36px;
-    height: 36px;
+    margin: 3px;
 }
 
 .editsymbol {
