--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
+* {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body {
     background: #58607B;
     font-family: 'Marcellus', serif;
