--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,7 @@ body {
     margin: 0px;
     font-size: 35px;
     padding-left: 10px;
-    text-align: center;
+    text-align: left;
 }
 
 #adder-circle {
