--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,10 +2,8 @@ html {
     box-sizing: border-box;
 }
 
-*,
-*:before,
-*:after {
-    box-sizing: inherit;
+p {
+    margin: 0px;
 }
 
 body {
@@ -35,27 +33,30 @@ body {
     margin-right: 10px;
 }
 
-.face {
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    color: #AF1111;
+}
+
+.session,
+.adventure-card {
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%), #E6D6C6;
     box-shadow: 0px 3.58543px 3.58543px rgba(0, 0, 0, 0.25);
     border-radius: 7px;
     width: 288px;
-    height: 45px;
     margin-top: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
 
-.text-input {
+.text-input,
+.card-header-input,
+.card-body-input {
     background: rgba(0, 0, 0, 0);
     border: none;
-    width: 245px;
-    height: 45px;
-    margin: 0px;
-    font-size: 35px;
-    padding-left: 10px;
-    text-align: left;
+    min-width: 10px;
 }
 
 #adder-circle {
@@ -67,13 +68,4 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.deletesymbol {
-    margin: 3px;
-}
-
-.editsymbol {
-    align-self: flex-end;
-    margin: 3px;
 }
