structured entire code

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,7 +4,7 @@
     grid-template-columns: auto 21px;
 }
 
-.text-input {
+.body-input {
     height: 45px;
     font-size: 36px;
     padding-left: 10px;
