--- a/public/css/session.css
+++ b/public/css/session.css
@@ -7,7 +7,7 @@
     padding: 5px;
 }
 
-.card-header-input {
+.header-input {
     font-size: 30px;
     min-width: 10px;
     height: 40px;
@@ -19,7 +19,7 @@
     margin: 0px;
 }
 
-.card-body-input {
+.body-input {
     grid-area: card-body;
     height: 150px;
     resize: none;
